fix: adjust defeat-screen to hardcode html fix inherit visibility-bugs

--- a/style.css
+++ b/style.css
@@ -119,6 +119,18 @@ body {
   width: 100svw;
 }
 
+#defeat-screen {
+  background-image: url("assets/img/6.Botones/Tittles/Game Over/Recurso 9.png");
+    background-repeat: round;
+    background-size: cover;
+    height: 15vh;
+    position: absolute;
+    width: 80%;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 #canvas {
   width: 100svw;
   height: 100svh;
